fir_ei/fir_parser.output
Terminals unused in grammar

    tINPUT


Grammar

    0 $accept: file $end

    1 file: %empty
    2     | seq_decl

    3 seq_decl: decl
    4         | seq_decl decl

    5 decl: vardec ';'
    6     | fundec
    7     | fundef

    8 vardec: data_type '?' tID
    9       | data_type '*' tID opt_init
   10       | data_type tID opt_init

   11 opt_vardecs: %empty
   12            | funcvars

   13 funcvar: data_type tID
   14        | data_type tID '=' expr

   15 funcvars: funcvar ';'
   16         | funcvars funcvar ';'

   17 data_type: tTYPE_STRING
   18          | tTYPE_INT
   19          | tTYPE_FLOAT
   20          | '<' data_type '>'

   21 void_type: tTYPE_VOID

   22 opt_init: %empty
   23         | '=' expr

   24 argdecs: %empty
   25        | argdec
   26        | argdecs ',' argdec

   27 argdec: data_type tID

   28 fundec: data_type tID '(' argdecs ')'
   29       | data_type '?' tID '(' argdecs ')'
   30       | data_type '*' tID '(' argdecs ')'
   31       | void_type tID '(' argdecs ')'
   32       | void_type '?' tID '(' argdecs ')'
   33       | void_type '*' tID '(' argdecs ')'

   34 fundef: data_type tID '(' argdecs ')' '-' '>' literal body
   35       | data_type '*' tID '(' argdecs ')' '-' '>' literal body
   36       | data_type tID '(' argdecs ')' body
   37       | data_type '*' tID '(' argdecs ')' body
   38       | void_type tID '(' argdecs ')' body
   39       | void_type '*' tID '(' argdecs ')' body

   40 body: '@' prologue
   41     | block
   42     | '>' '>' block
   43     | '@' prologue block
   44     | '@' prologue '>' '>' block
   45     | block '>' '>' block
   46     | '@' prologue block '>' '>' block

   47 prologue: '{' opt_vardecs opt_inst '}'

   48 block: '{' opt_vardecs opt_inst '}'

   49 seq_inst: inst
   50         | seq_inst inst

   51 opt_inst: %empty
   52         | seq_inst

   53 inst: ifs
   54     | while
   55     | expr ';'
   56     | tWRITE seq_expr ';'
   57     | tWRITELN seq_expr ';'
   58     | tLEAVE ';'
   59     | tLEAVE tINTEGER ';'
   60     | tRESTART ';'
   61     | tRESTART tINTEGER ';'
   62     | tRETURN
   63     | block

   64 ifs: tIF expr tTHEN inst
   65    | tIF expr tTHEN inst tELSE inst

   66 while: tWHILE expr tDO inst
   67      | tWHILE expr tDO inst tFINALLY inst

   68 opt_expr: %empty
   69         | seq_expr

   70 seq_expr: expr
   71         | seq_expr ',' expr

   72 expr: literal
   73     | lval '=' expr
   74     | expr '+' expr
   75     | expr '-' expr
   76     | expr '*' expr
   77     | expr '/' expr
   78     | expr '%' expr
   79     | expr '<' expr
   80     | expr tLE expr
   81     | expr tEQ expr
   82     | expr tGE expr
   83     | expr '>' expr
   84     | expr tNE expr
   85     | expr tAND expr
   86     | expr tOR expr
   87     | '-' expr
   88     | '+' expr
   89     | '~' expr
   90     | '@'
   91     | tID '(' opt_expr ')'
   92     | tSIZEOF '(' expr ')'
   93     | '(' expr ')'
   94     | '[' expr ']'
   95     | lval
   96     | lval '?'

   97 lval: tID
   98     | lval '[' expr ']'
   99     | '(' expr ')' '[' expr ']'
  100     | tID '(' opt_expr ')' '[' expr ']'

  101 literal: integer
  102        | float
  103        | string
  104        | tNULL

  105 integer: tINTEGER

  106 float: tFLOAT

  107 string: tSTRING
  108       | string tSTRING


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 78
    '(' (40) 28 29 30 31 32 33 34 35 36 37 38 39 91 92 93 99 100
    ')' (41) 28 29 30 31 32 33 34 35 36 37 38 39 91 92 93 99 100
    '*' (42) 9 30 33 35 37 39 76
    '+' (43) 74 88
    ',' (44) 26 71
    '-' (45) 34 35 75 87
    '/' (47) 77
    ';' (59) 5 15 16 55 56 57 58 59 60 61
    '<' (60) 20 79
    '=' (61) 14 23 73
    '>' (62) 20 34 35 42 44 45 46 83
    '?' (63) 8 29 32 96
    '@' (64) 40 43 44 46 90
    '[' (91) 94 98 99 100
    ']' (93) 94 98 99 100
    '{' (123) 47 48
    '}' (125) 47 48
    '~' (126) 89
    error (256)
    tAND (258) 85
    tOR (259) 86
    tSIZEOF (260) 92
    tTYPE_STRING (261) 17
    tTYPE_INT (262) 18
    tTYPE_FLOAT (263) 19
    tTYPE_VOID (264) 21
    tINPUT (265)
    tWRITE (266) 56
    tWRITELN (267) 57
    tIF (268) 64 65
    tTHEN (269) 64 65
    tELSE (270) 65
    tWHILE (271) 66 67
    tDO (272) 66 67
    tFINALLY (273) 67
    tLEAVE (274) 58 59
    tRESTART (275) 60 61
    tRETURN (276) 62
    tINTEGER <i> (277) 59 61 105
    tFLOAT <d> (278) 106
    tID <s> (279) 8 9 10 13 14 27 28 29 30 31 32 33 34 35 36 37 38 39 91 97 100
    tSTRING <s> (280) 107 108
    tNULL <expression> (281) 104
    tNE (282) 84
    tEQ (283) 81
    tLE (284) 80
    tGE (285) 82
    tUMINUS (286)


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    file <sequence> (52)
        on left: 1 2
        on right: 0
    seq_decl <sequence> (53)
        on left: 3 4
        on right: 2 4
    decl <node> (54)
        on left: 5 6 7
        on right: 3 4
    vardec <node> (55)
        on left: 8 9 10
        on right: 5
    opt_vardecs <sequence> (56)
        on left: 11 12
        on right: 47 48
    funcvar <node> (57)
        on left: 13 14
        on right: 15 16
    funcvars <sequence> (58)
        on left: 15 16
        on right: 12 16
    data_type <type> (59)
        on left: 17 18 19 20
        on right: 8 9 10 13 14 20 27 28 29 30 34 35 36 37
    void_type <type> (60)
        on left: 21
        on right: 31 32 33 38 39
    opt_init <expression> (61)
        on left: 22 23
        on right: 9 10
    argdecs <sequence> (62)
        on left: 24 25 26
        on right: 26 28 29 30 31 32 33 34 35 36 37 38 39
    argdec <node> (63)
        on left: 27
        on right: 25 26
    fundec <node> (64)
        on left: 28 29 30 31 32 33
        on right: 6
    fundef <node> (65)
        on left: 34 35 36 37 38 39
        on right: 7
    body <body> (66)
        on left: 40 41 42 43 44 45 46
        on right: 34 35 36 37 38 39
    prologue <prologue> (67)
        on left: 47
        on right: 40 43 44 46
    block <block> (68)
        on left: 48
        on right: 41 42 43 44 45 46 63
    seq_inst <sequence> (69)
        on left: 49 50
        on right: 50 52
    opt_inst <sequence> (70)
        on left: 51 52
        on right: 47 48
    inst <node> (71)
        on left: 53 54 55 56 57 58 59 60 61 62 63
        on right: 49 50 64 65 66 67
    ifs <node> (72)
        on left: 64 65
        on right: 53
    while <node> (73)
        on left: 66 67
        on right: 54
    opt_expr <sequence> (74)
        on left: 68 69
        on right: 91 100
    seq_expr <sequence> (75)
        on left: 70 71
        on right: 56 57 69 71
    expr <expression> (76)
        on left: 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96
        on right: 14 23 55 64 65 66 67 70 71 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 92 93 94 98 99 100
    lval <lval> (77)
        on left: 97 98 99 100
        on right: 73 95 96 98
    literal <expression> (78)
        on left: 101 102 103 104
        on right: 34 35 72
    integer <expression> (79)
        on left: 105
        on right: 101
    float <expression> (80)
        on left: 106
        on right: 102
    string <s> (81)
        on left: 107 108
        on right: 103 108


State 0

    0 $accept: . file $end

    tTYPE_STRING  shift, and go to state 1
    tTYPE_INT     shift, and go to state 2
    tTYPE_FLOAT   shift, and go to state 3
    tTYPE_VOID    shift, and go to state 4
    '<'           shift, and go to state 5

    $default  reduce using rule 1 (file)

    file       go to state 6
    seq_decl   go to state 7
    decl       go to state 8
    vardec     go to state 9
    data_type  go to state 10
    void_type  go to state 11
    fundec     go to state 12
    fundef     go to state 13


State 1

   17 data_type: tTYPE_STRING .

    $default  reduce using rule 17 (data_type)


State 2

   18 data_type: tTYPE_INT .

    $default  reduce using rule 18 (data_type)


State 3

   19 data_type: tTYPE_FLOAT .

    $default  reduce using rule 19 (data_type)


State 4

   21 void_type: tTYPE_VOID .

    $default  reduce using rule 21 (void_type)


State 5

   20 data_type: '<' . data_type '>'

    tTYPE_STRING  shift, and go to state 1
    tTYPE_INT     shift, and go to state 2
    tTYPE_FLOAT   shift, and go to state 3
    '<'           shift, and go to state 5

    data_type  go to state 14


State 6

    0 $accept: file . $end

    $end  shift, and go to state 15


State 7

    2 file: seq_decl .
    4 seq_decl: seq_decl . decl

    tTYPE_STRING  shift, and go to state 1
    tTYPE_INT     shift, and go to state 2
    tTYPE_FLOAT   shift, and go to state 3
    tTYPE_VOID    shift, and go to state 4
    '<'           shift, and go to state 5

    $default  reduce using rule 2 (file)

    decl       go to state 16
    vardec     go to state 9
    data_type  go to state 10
    void_type  go to state 11
    fundec     go to state 12
    fundef     go to state 13


State 8

    3 seq_decl: decl .

    $default  reduce using rule 3 (seq_decl)


State 9

    5 decl: vardec . ';'

    ';'  shift, and go to state 17


State 10

    8 vardec: data_type . '?' tID
    9       | data_type . '*' tID opt_init
   10       | data_type . tID opt_init
   28 fundec: data_type . tID '(' argdecs ')'
   29       | data_type . '?' tID '(' argdecs ')'
   30       | data_type . '*' tID '(' argdecs ')'
   34 fundef: data_type . tID '(' argdecs ')' '-' '>' literal body
   35       | data_type . '*' tID '(' argdecs ')' '-' '>' literal body
   36       | data_type . tID '(' argdecs ')' body
   37       | data_type . '*' tID '(' argdecs ')' body

    tID  shift, and go to state 18
    '*'  shift, and go to state 19
    '?'  shift, and go to state 20


State 11

   31 fundec: void_type . tID '(' argdecs ')'
   32       | void_type . '?' tID '(' argdecs ')'
   33       | void_type . '*' tID '(' argdecs ')'
   38 fundef: void_type . tID '(' argdecs ')' body
   39       | void_type . '*' tID '(' argdecs ')' body

    tID  shift, and go to state 21
    '*'  shift, and go to state 22
    '?'  shift, and go to state 23


State 12

    6 decl: fundec .

    $default  reduce using rule 6 (decl)


State 13

    7 decl: fundef .

    $default  reduce using rule 7 (decl)


State 14

   20 data_type: '<' data_type . '>'

    '>'  shift, and go to state 24


State 15

    0 $accept: file $end .

    $default  accept


State 16

    4 seq_decl: seq_decl decl .

    $default  reduce using rule 4 (seq_decl)


State 17

    5 decl: vardec ';' .

    $default  reduce using rule 5 (decl)


State 18

   10 vardec: data_type tID . opt_init
   28 fundec: data_type tID . '(' argdecs ')'
   34 fundef: data_type tID . '(' argdecs ')' '-' '>' literal body
   36       | data_type tID . '(' argdecs ')' body

    '='  shift, and go to state 25
    '('  shift, and go to state 26

    $default  reduce using rule 22 (opt_init)

    opt_init  go to state 27


State 19

    9 vardec: data_type '*' . tID opt_init
   30 fundec: data_type '*' . tID '(' argdecs ')'
   35 fundef: data_type '*' . tID '(' argdecs ')' '-' '>' literal body
   37       | data_type '*' . tID '(' argdecs ')' body

    tID  shift, and go to state 28


State 20

    8 vardec: data_type '?' . tID
   29 fundec: data_type '?' . tID '(' argdecs ')'

    tID  shift, and go to state 29


State 21

   31 fundec: void_type tID . '(' argdecs ')'
   38 fundef: void_type tID . '(' argdecs ')' body

    '('  shift, and go to state 30


State 22

   33 fundec: void_type '*' . tID '(' argdecs ')'
   39 fundef: void_type '*' . tID '(' argdecs ')' body

    tID  shift, and go to state 31


State 23

   32 fundec: void_type '?' . tID '(' argdecs ')'

    tID  shift, and go to state 32


State 24

   20 data_type: '<' data_type '>' .

    $default  reduce using rule 20 (data_type)


State 25

   23 opt_init: '=' . expr

    tSIZEOF   shift, and go to state 33
    tINTEGER  shift, and go to state 34
    tFLOAT    shift, and go to state 35
    tID       shift, and go to state 36
    tSTRING   shift, and go to state 37
    tNULL     shift, and go to state 38
    '~'       shift, and go to state 39
    '+'       shift, and go to state 40
    '-'       shift, and go to state 41
    '('       shift, and go to state 42
    '@'       shift, and go to state 43
    '['       shift, and go to state 44

    expr     go to state 45
    lval     go to state 46
    literal  go to state 47
    integer  go to state 48
    float    go to state 49
    string   go to state 50


State 26

   28 fundec: data_type tID '(' . argdecs ')'
   34 fundef: data_type tID '(' . argdecs ')' '-' '>' literal body
   36       | data_type tID '(' . argdecs ')' body

    tTYPE_STRING  shift, and go to state 1
    tTYPE_INT     shift, and go to state 2
    tTYPE_FLOAT   shift, and go to state 3
    '<'           shift, and go to state 5

    $default  reduce using rule 24 (argdecs)

    data_type  go to state 51
    argdecs    go to state 52
    argdec     go to state 53


State 27

   10 vardec: data_type tID opt_init .

    $default  reduce using rule 10 (vardec)


State 28

    9 vardec: data_type '*' tID . opt_init
   30 fundec: data_type '*' tID . '(' argdecs ')'
   35 fundef: data_type '*' tID . '(' argdecs ')' '-' '>' literal body
   37       | data_type '*' tID . '(' argdecs ')' body

    '='  shift, and go to state 25
    '('  shift, and go to state 54

    $default  reduce using rule 22 (opt_init)

    opt_init  go to state 55


State 29

    8 vardec: data_type '?' tID .
   29 fundec: data_type '?' tID . '(' argdecs ')'

    '('  shift, and go to state 56

    $default  reduce using rule 8 (vardec)


State 30

   31 fundec: void_type tID '(' . argdecs ')'
   38 fundef: void_type tID '(' . argdecs ')' body

    tTYPE_STRING  shift, and go to state 1
    tTYPE_INT     shift, and go to state 2
    tTYPE_FLOAT   shift, and go to state 3
    '<'           shift, and go to state 5

    $default  reduce using rule 24 (argdecs)

    data_type  go to state 51
    argdecs    go to state 57
    argdec     go to state 53


State 31

   33 fundec: void_type '*' tID . '(' argdecs ')'
   39 fundef: void_type '*' tID . '(' argdecs ')' body

    '('  shift, and go to state 58


State 32

   32 fundec: void_type '?' tID . '(' argdecs ')'

    '('  shift, and go to state 59


State 33

   92 expr: tSIZEOF . '(' expr ')'

    '('  shift, and go to state 60


State 34

  105 integer: tINTEGER .

    $default  reduce using rule 105 (integer)


State 35

  106 float: tFLOAT .

    $default  reduce using rule 106 (float)


State 36

   91 expr: tID . '(' opt_expr ')'
   97 lval: tID .
  100     | tID . '(' opt_expr ')' '[' expr ']'

    '('  shift, and go to state 61

    $default  reduce using rule 97 (lval)


State 37

  107 string: tSTRING .

    $default  reduce using rule 107 (string)


State 38

  104 literal: tNULL .

    $default  reduce using rule 104 (literal)


State 39

   89 expr: '~' . expr

    tSIZEOF   shift, and go to state 33
    tINTEGER  shift, and go to state 34
    tFLOAT    shift, and go to state 35
    tID       shift, and go to state 36
    tSTRING   shift, and go to state 37
    tNULL     shift, and go to state 38
    '~'       shift, and go to state 39
    '+'       shift, and go to state 40
    '-'       shift, and go to state 41
    '('       shift, and go to state 42
    '@'       shift, and go to state 43
    '['       shift, and go to state 44

    expr     go to state 62
    lval     go to state 46
    literal  go to state 47
    integer  go to state 48
    float    go to state 49
    string   go to state 50


State 40

   88 expr: '+' . expr

    tSIZEOF   shift, and go to state 33
    tINTEGER  shift, and go to state 34
    tFLOAT    shift, and go to state 35
    tID       shift, and go to state 36
    tSTRING   shift, and go to state 37
    tNULL     shift, and go to state 38
    '~'       shift, and go to state 39
    '+'       shift, and go to state 40
    '-'       shift, and go to state 41
    '('       shift, and go to state 42
    '@'       shift, and go to state 43
    '['       shift, and go to state 44

    expr     go to state 63
    lval     go to state 46
    literal  go to state 47
    integer  go to state 48
    float    go to state 49
    string   go to state 50


State 41

   87 expr: '-' . expr

    tSIZEOF   shift, and go to state 33
    tINTEGER  shift, and go to state 34
    tFLOAT    shift, and go to state 35
    tID       shift, and go to state 36
    tSTRING   shift, and go to state 37
    tNULL     shift, and go to state 38
    '~'       shift, and go to state 39
    '+'       shift, and go to state 40
    '-'       shift, and go to state 41
    '('       shift, and go to state 42
    '@'       shift, and go to state 43
    '['       shift, and go to state 44

    expr     go to state 64
    lval     go to state 46
    literal  go to state 47
    integer  go to state 48
    float    go to state 49
    string   go to state 50


State 42

   93 expr: '(' . expr ')'
   99 lval: '(' . expr ')' '[' expr ']'

    tSIZEOF   shift, and go to state 33
    tINTEGER  shift, and go to state 34
    tFLOAT    shift, and go to state 35
    tID       shift, and go to state 36
    tSTRING   shift, and go to state 37
    tNULL     shift, and go to state 38
    '~'       shift, and go to state 39
    '+'       shift, and go to state 40
    '-'       shift, and go to state 41
    '('       shift, and go to state 42
    '@'       shift, and go to state 43
    '['       shift, and go to state 44

    expr     go to state 65
    lval     go to state 46
    literal  go to state 47
    integer  go to state 48
    float    go to state 49
    string   go to state 50


State 43

   90 expr: '@' .

    $default  reduce using rule 90 (expr)


State 44

   94 expr: '[' . expr ']'

    tSIZEOF   shift, and go to state 33
    tINTEGER  shift, and go to state 34
    tFLOAT    shift, and go to state 35
    tID       shift, and go to state 36
    tSTRING   shift, and go to state 37
    tNULL     shift, and go to state 38
    '~'       shift, and go to state 39
    '+'       shift, and go to state 40
    '-'       shift, and go to state 41
    '('       shift, and go to state 42
    '@'       shift, and go to state 43
    '['       shift, and go to state 44

    expr     go to state 66
    lval     go to state 46
    literal  go to state 47
    integer  go to state 48
    float    go to state 49
    string   go to state 50


State 45

   23 opt_init: '=' expr .
   74 expr: expr . '+' expr
   75     | expr . '-' expr
   76     | expr . '*' expr
   77     | expr . '/' expr
   78     | expr . '%' expr
   79     | expr . '<' expr
   80     | expr . tLE expr
   81     | expr . tEQ expr
   82     | expr . tGE expr
   83     | expr . '>' expr
   84     | expr . tNE expr
   85     | expr . tAND expr
   86     | expr . tOR expr

    tAND  shift, and go to state 67
    tOR   shift, and go to state 68
    tNE   shift, and go to state 69
    tEQ   shift, and go to state 70
    '<'   shift, and go to state 71
    tLE   shift, and go to state 72
    tGE   shift, and go to state 73
    '>'   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '%'   shift, and go to state 79

    $default  reduce using rule 23 (opt_init)


State 46

   73 expr: lval . '=' expr
   95     | lval .
   96     | lval . '?'
   98 lval: lval . '[' expr ']'

    '='  shift, and go to state 80
    '?'  shift, and go to state 81
    '['  shift, and go to state 82

    $default  reduce using rule 95 (expr)


State 47

   72 expr: literal .

    $default  reduce using rule 72 (expr)


State 48

  101 literal: integer .

    $default  reduce using rule 101 (literal)


State 49

  102 literal: float .

    $default  reduce using rule 102 (literal)


State 50

  103 literal: string .
  108 string: string . tSTRING

    tSTRING  shift, and go to state 83

    $default  reduce using rule 103 (literal)


State 51

   27 argdec: data_type . tID

    tID  shift, and go to state 84


State 52
